--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ WTForms==1.0.5
 Werkzeug==0.9.6
 beautifulsoup4==4.3.2
 itsdangerous==0.24
-gunicorn>=0.17.2
+#gunicorn>=0.17.2
 Flask-RESTful>=0.3.3
